objects/Trigger_Handler_Setting__mdt/Trigger_Handler_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Controls trigger handler operation</description>
    <label>Trigger Handler Setting</label>
    <pluralLabel>Trigger Handler Settings</pluralLabel>
</CustomObject>