objects/Trigger_Handler_Setting__mdt/fields/Disable_Recursion_Control__c.field-meta.xml
<CustomField>
    <fullName>Disable_Recursion_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turns off Recursion Control for TriggerHandler</description>
    <inlineHelpText>Turns off Recursion Control for TriggerHandler</inlineHelpText>
    <label>Disable Recursion Control</label>
    <type>Checkbox</type>
</CustomField>