objects/Trigger_Handler_Setting__mdt/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Turns off trigger handler for all users</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>