objects/Trigger_Handler_Setting__mdt/fields/Recursion_Limit__c.field-meta.xml
<CustomField>
    <fullName>Recursion_Limit__c</fullName>
    <description>Number of times unique Trigger Operation can run, i.e. separate limit for BeforeInsert, AfterInsert, BeforeUpdate, etc</description>
    <inlineHelpText>Number of times unique Trigger Operation can run</inlineHelpText>
    <label>Recursion Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>