objects/Trigger_Handler_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Disabled__c</columns>
    <columns>Disable_Recursion_Control__c</columns>
    <columns>Recursion_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>